...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0qs-FQ-xbS">
                                        <rect key="frame" x="0.0" y="0.0" width="394" height="20.333333333333332"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.30203610660000002" green="0.27250319719999999" blue="0.36622202399999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="shY-lk-cYT">
                                        <rect key="frame" x="0.0" y="30.333333333333343" width="394" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HrZ-Ix-9XN">
                                        <rect key="frame" x="0.0" y="74.333333333333343" width="394" height="20.333333333333329"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.30203610660000002" green="0.27250319719999999" blue="0.36622202399999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eCA-el-oLM">
                                        <rect key="frame" x="0.0" y="104.66666666666666" width="394" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgb-zo-env">
                                        <rect key="frame" x="0.0" y="148.66666666666669" width="394" height="20.333333333333343"/>
...
                                        <color key="textColor" red="0.30203610660000002" green="0.27250319719999999" blue="0.36622202399999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" restorationIdentifier="placeButton" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kTu-4f-9aU">
                                        <rect key="frame" x="0.0" y="269.33333333333331" width="394" height="30"/>
                                        <color key="backgroundColor" systemColor="systemCyanColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="typeOfEvent"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <menu key="menu" identifier="typeOfEventMenu" id="J8K-jY-VFN">
                                            <children>
                                                <command title="Item 1" id="r7S-gc-F8l"/>
                                                <command title="Item 2" id="Czl-rK-tt5"/>
                                            </children>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="textColor" red="0.30203610660000002" green="0.27250319719999999" blue="0.36622202399999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YiC-on-QY9">
                                        <rect key="frame" x="0.0" y="200" width="394" height="20"/>
                                        <accessibility key="accessibilityConfiguration" identifier="weatherLabel"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Italic" family="Helvetica Neue" pointSize="17"/>
                                        <color key="textColor" red="0.30203610660000002" green="0.27250319719999999" blue="0.36622202399999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="MMV-G1-Oau">
                                        <rect key="frame" x="0.0" y="240.00000000000003" width="394" height="34.333333333333343"/>
...
