<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Image references" minToolsVersion="12.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <tableViewCell alpha="0.65000000000000002" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListViewItem" rowHeight="61" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="ReminderWithWeather" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="332" height="61"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                <rect key="frame" x="0.0" y="0.0" width="332" height="61"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <stackView autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="YrF-lB-LxQ">
                        <rect key="frame" x="10" y="10" width="312" height="40"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="239" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k9V-bU-3o6">
                                <rect key="frame" x="0.0" y="2.3333333333333321" width="40" height="35.333333333333343"/>
                                <accessibility key="accessibilityConfiguration" identifier="typeImage"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="aZI-ak-Usf"/>
                                </constraints>
                                <imageReference key="image" image="sun.max.circle" catalog="system" symbolScale="small" renderingMode="original"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zP1-2v-BLK">
                                <rect key="frame" x="50" y="0.0" width="152" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="cellName"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nr0-sP-d20">
                                <rect key="frame" x="212" y="0.0" width="100" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="cellDate"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="OFw-Mt-Ozk"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <constraints>
                            <constraint firstAttribute="height" constant="40" id="7hZ-Yh-Cxu"/>
                        </constraints>
                    </stackView>
                </subviews>
                <constraints>
                    <constraint firstItem="YrF-lB-LxQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="CBY-sK-gby"/>
                    <constraint firstAttribute="trailing" secondItem="YrF-lB-LxQ" secondAttribute="trailing" constant="10" id="EZV-uU-xP7"/>
                    <constraint firstAttribute="bottom" secondItem="YrF-lB-LxQ" secondAttribute="bottom" constant="10" id="Fz4-xR-cYb"/>
                    <constraint firstItem="YrF-lB-LxQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="SfW-Hf-85M"/>
                </constraints>
            </tableViewCellContentView>
            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
            <color key="tintColor" red="0.30203610660000002" green="0.27250319719999999" blue="0.36622202399999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <connections>
                <outlet property="cellView" destination="H2p-sc-9uM" id="ffs-hv-V90"/>
                <outlet property="dateLabel" destination="Nr0-sP-d20" id="rvF-8V-p0M"/>
                <outlet property="nameLabel" destination="zP1-2v-BLK" id="ZBj-kQ-B3F"/>
                <outlet property="placeImage" destination="k9V-bU-3o6" id="oL1-9d-abs"/>
            </connections>
            <point key="canvasLocation" x="1.5267175572519083" y="-44.718309859154935"/>
        </tableViewCell>
    </objects>
    <resources>
        <image name="sun.max.circle" catalog="system" width="128" height="123"/>
    </resources>
</document>
