...
            // 3. Give the session a task
            let task = session.dataTask(with: url) { data, response, error in
                print("Response: \(String(describing: response))")
                if error != nil {
                    print("Error on request weather: \(error!)")
                    self.delegate?.didFailWithError(error:error!)
                    return
                }
                if let safeData = data {
                    let result = self.parseJson(weatherData: safeData)
                    self.delegate?.didUpdateWeather(tempr: result!)
                }
            }
...
